infrastructure/monitoring/ingress/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring
  namespace: monitoring
spec:
  routes:
  - kind: Rule
    match: Host(`monitoring.ryanschnabel.com`)
    services:
    - kind: Service
      name: grafana
      port: 3000
  - kind: Rule
    match: Host(`prom.ryanschnabel.com`)
    services:
    - name: prometheus-k8s
      port: 9090
    middlewares:
      - name: traefik-forward-auth
  - kind: Rule
    match: Host(`alerts.ryanschnabel.com`)
    services:
    - name: alertmanager
      port: 9093
    middlewares:
      - name: traefik-forward-auth
